allow new and event_abort in conditions of find/get + minor changes
Merge of branch 2021.02.new_and_event_abort_find_conditions

- use comparisons of indices even more in GDH
- fixed probabilities in square GDH and PRF-ODH
- examplesnd/test/feldhofer-diff-v3.cv: Feldhofer protocol proved using SPRP assumption
- cryptolib/additional.cvl: macros DH_single, using a single family of exponents, still to prove and test

--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,13 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
-Version
+Version 2.05
 
 - Allow comparisons between indices and tables (insert, get)
 in the right-hand side of equiv declarations.
 - Optimize the right-hand side of equiv declarations by removing
 useless assignments.
+- Allow new and event_abort in conditions of find and get.
 - Allow multiple command-line options "-lib <file>".
 - Minor improvement of some error messages.
 - Avoid creating duplicate defined conditions in transformation
@@ -15,6 +16,7 @@ remove_assign.
 - Fixed bug in update of defined conditions following other
 rewritings of the game: it supported only expanded games, but
 was sometimes called on non-expanded games.
+- Fixed probabilities in square GDH and PRF-ODH.
 
 Version 2.04
 
