--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -358,7 +358,7 @@ constructs of output processes but return a bitstring instead of
 executing a process. 
 They are not allowed to occur in \texttt{defined} conditions of \texttt{find}.
 % and in input channels.
-The constructs \texttt{<-R}, \texttt{new}, \texttt{event}, \texttt{event\string_abort}, and \texttt{insert} are not allowed to 
+The constructs \texttt{event} and \texttt{insert} are not allowed to 
 occur in conditions of \texttt{find} or {\tt get}.
 We refer the reader to the description of 
 processes below for a fully detailed explanation.
