--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,8 @@ family of exponents, in the standard library of cryptographic primitives.
 - Minor improvement of some error messages.
 - Avoid creating duplicate defined conditions in transformation
 remove_assign.
+- Minor improvement of the precision of the treatment of else
+conditions of find.
 - Fixed bug in computation of indices in crypto transformation.
 - Fixed bug in update of defined conditions following other
 rewritings of the game: it supported only expanded games, but
