--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ useless assignments.
 game are really unique.
 - Added definitions of Diffie-Hellman properties with a single
 family of exponents, in the standard library of cryptographic primitives.
+- Allow "min" in probability formulas.
 - Allow multiple command-line options "-lib <file>".
 - Minor improvement of some error messages.
 - Avoid creating duplicate defined conditions in transformation
