--- a/CHANGES
+++ b/CHANGES
@@ -18,7 +18,7 @@ family of exponents, in the standard library of cryptographic primitives.
 library of cryptographic primitives (it is more limited than other DDH
 macros).
 - Allow multiple command-line options "-lib <file>".
-- Minor improvement of some error messages.
+- Improvement of some error messages (suggestion of Benjamin Lipp).
 - Avoid creating duplicate defined conditions in transformation
 remove_assign.
 - Minor improvement of the precision of the treatment of else
