a non-existing file is now considered as an empty table (bug reported by Benjamin Lipp)

--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,8 @@ macros).
 remove_assign.
 - Minor improvement of the precision of the treatment of else
 conditions of find.
+- Fixed bug in generation of OCaml implementations: a non-existing
+file is now considered as an empty table (reported by Benjamin Lipp).
 - Fixed bug in generation of OCaml implementations: serialization
 and deserialization functions were swapped for types bool and bitstringbot
 (fixed by Benjamin Lipp).
