--- a/TODO
+++ b/TODO
@@ -55,6 +55,8 @@ When P is applied, it is replaced with the given probability function.
 When checking dimensions in probability formulas, emit a warning instead of an error
 when the "probability" dimension does not match (in fact, it has no real
 meaning, but it allows to catch bugs).
+Add these constructs to ProVerif as well for compatibility (but ignore them).
+
 
 0.2)
 Use the improved computation of probabilities for Shoup's lemma
@@ -310,6 +312,8 @@ We could probably push this idea for noninterf x among S.
    events several times.
       
    Also query secret x [reachability] (the adversary cannot compute x).
+
+   Add get[unique] to ProVerif?
 
 3) 
 PRF-ODH: I think "success simplify" and "focus" 
